<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nameEnemy"
        android:text="@string/NAME"
        android:layout_weight="1"
        android:textSize="15sp"
        android:gravity="start|center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/HealthPointEnemy"
        android:text="@string/HealthPoint"
        android:layout_weight="1"
        android:textSize="15sp"
        android:gravity="start|center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/damageEnemy"
        android:text="@string/Damage"
        android:layout_weight="1"
        android:textSize="15sp"
        android:gravity="start|center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/defenseEnemy"
        android:text="@string/Defense"
        android:layout_weight="1"
        android:textSize="15sp"
        android:gravity="start|center"/>

</LinearLayout>